@@ -327,10 +327,21 @@ bool CMusicInfoTagLoaderMP4::Load(const CStdString& strFileName, CMusicInfoTag& 
 
     if (foundThumb)
     { // cache the thumb
-      CStdString strCoverArt, strPath;
-      CUtil::GetDirectory( tag.GetURL(), strPath );
-      CUtil::GetAlbumThumb( tag.GetAlbum(), strPath, strCoverArt, true );
-
+      // if we don't have an album tag, cache with the full file path so that
+      // other non-tagged files don't get this album image
+      CStdString strCoverArt;
+      if (!tag.GetAlbum().IsEmpty())
+      {
+        CStdString strPath;
+        CUtil::GetDirectory(tag.GetURL(), strPath);
+        CUtil::GetAlbumThumb(tag.GetAlbum(), strPath, strCoverArt, true);
+      }
+      else
+      {
+        CStdString strPath;
+        CUtil::ReplaceExtension(tag.GetURL(), ".tbn", strPath);
+        CUtil::GetAlbumFolderThumb(strPath, strCoverArt, true);
+      }
       if (CFile::Cache(TEMP_MP4_THUMB_FILE, strCoverArt.c_str()))
       {
         CUtil::ThumbCacheAdd( strCoverArt, true );
